--- a/navbar.html
+++ b/navbar.html
@@ -23,7 +23,7 @@
         
                 </div>
                 <ul>
-                    <li>Main Page</li>
+                    <li>Home</li>
                     <li>Services</li>
                     <li>About us</li>
                     <li>Contact Us</li>
